After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740201 - gl/cocoa: Does not compile on OSX < 10.7 anymore
gl/cocoa: Does not compile on OSX < 10.7 anymore
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.4.4
Other Mac OS
: Normal normal
: 1.4.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-16 05:52 UTC by Ryan Hendrickson
Modified: 2014-11-19 16:28 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ryan Hendrickson 2014-11-16 05:52:24 UTC
Looks like two separate issues that both got introduced between 1.4.3 and 1.4.4:

    ../../../../gst-libs/gst/gl/gstglapi.h:76:27: error: OpenGL/gl3.h: No such file or directory

Caused by 85f67667b2e5d6de6b1b3d59cd08c44c12a30955; trouble is that on pre-10.7, MAC_OS_X_VERSION_10_7 evaluates to 0, so the conditional doesn't actually do much.

    gstglwindow_cocoa.m: In function '-[GstGLNSView reshape:]':
    gstglwindow_cocoa.m:567: error: incompatible types in assignment
    gstglwindow_cocoa.m:568: error: incompatible types in assignment

Caused by 29e7f2f06e630fefbe84c3564736ad3f04d32c00, I think; convertRectToBacking isn't available pre-10.7.
Comment 1 Sebastian Dröge (slomo) 2014-11-16 10:01:50 UTC
Thanks for reporting, this will be fixed in 1.4.5. Note however that we dropped support for OSX < 10.8 in GIT master, and 1.6 will only support 10.8 or newer.


commit 236ffa69bed21bcfe289e2e7a44b7f394ec75b90
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Sun Nov 16 11:00:14 2014 +0100

    gl/cocoa: Only use convertRectToBacking on OSX >= 10.7
    
    It does not exist before and older versions also don't have
    support for HiDPI displays anyway.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740201

commit 9492db96d18d89ee140f969c901e5287c1af429b
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Sun Nov 16 10:57:55 2014 +0100

    gl: Use numeric OSX version instead of the macro
    
    The macro is not defined on older OSX versions and evaluates to 0.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740201